[PN-14254] fix: sonar issues